# dotrix-mobile-demo

./: Cargo.toml  README.md  mobile.toml.example
src/: fox.rs  lib.rs
